#------------------------------------------------------------------------------#
#                          Copyright (c) CliAuth 2024                          #
#                    https://github.com/bradleycha/cliauth                     #
#------------------------------------------------------------------------------#
# Makefile.am - GNU Automake script                                            #
#------------------------------------------------------------------------------#

bin_PROGRAMS = cliauth

cliauth_CFLAGS = -Wall -Wextra -Wpedantic -Werror -std=c89

cliauth_SOURCES = \
	src/cliauth.c \
	src/log.c \
	src/endian.c \
	src/bitwise.c \
	src/hash.c

