#------------------------------------------------------------------------------#
#                          Copyright (c) CliAuth 2024                          #
#                    https://github.com/bradleycha/cliauth                     #
#------------------------------------------------------------------------------#
# Makefile.am - GNU Automake script                                            #
#------------------------------------------------------------------------------#

bin_PROGRAMS = cliauth

cliauth_CFLAGS = -Wall -Wextra -Wpedantic -Werror -std=c89

cliauth_SOURCES = \
	src/cliauth.c \
	src/cliauth.h \
	src/types.h \
	src/log.c \
	src/log.h \
	src/endian.c \
	src/endian.h \
	src/bitwise.c \
	src/bitwise.h \
	src/hash.c \
	src/hash.h \
	src/mac.c \
	src/mac.h \
	src/otp.c \
	src/otp.h \
	src/parse.c \
	src/parse.h \
	src/args.c \
	src/args.h \
	src/account.c \
	src/account.h

