#------------------------------------------------------------------------------#
#                          Copyright (c) CliAuth 2024                          #
#                    https://github.com/bradleycha/cliauth                     #
#------------------------------------------------------------------------------#
# Makefile.am - GNU Automake script                                            #
#------------------------------------------------------------------------------#

bin_PROGRAMS = \
	cliauth

cliauth_CFLAGS = \
	-std=c89 \
	-Wall \
	-Wextra \
	-Wpedantic \
	-Werror

cliauth_SOURCES = \
	src/cliauth.c \
	src/cliauth.h \
	src/types.h \
	src/imports.h \
	src/log.c \
	src/log.h \
	src/bitwise.c \
	src/bitwise.h \
	src/memory.c \
	src/memory.h \
	src/endian.c \
	src/endian.h \
	src/io.c \
	src/io.h \
	src/parse.c \
	src/parse.h \
	src/hash.c \
	src/hash.h \
	src/mac.c \
	src/mac.h \
	src/otp.c \
	src/otp.h \
	src/account.c \
	src/account.h \
	src/args.c \
	src/args.h

